[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/EnemyDevourerBasic.png" type="Texture" id=1]
[ext_resource path="res://EnemyDevourerBasic.gd" type="Script" id=2]
[ext_resource path="res://assets/devourer_shell.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 45.1267
height = 899.455

[sub_resource type="CapsuleShape2D" id=2]
radius = 33.7547
height = 49.9689

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 162, 121 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 162, 0, 162, 121 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "neutral",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "aggro",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0.360784, 0.301961, 0.439216, 1, 0.180392, 0, 0.419608, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Animation" id=8]
resource_name = "damage"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Bone1/Bone2/Bone3/Bone4/armourC:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bone1/Bone2/Bone3/armourB:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bone1/Bone2/armourA:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Bone1/Bone2/armourA:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Bone1/Bone2/Bone3/armourB:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Bone1/Bone2/Bone3/Bone4/armourC:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Bone1/Bone2/Bone3/Bone4/armourC:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bone1/Bone2/Bone3/armourB:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bone1/Bone2/armourA:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Bone1/Bone2/Bone3/Bone4/armourC:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Bone1/Bone2/Bone3/armourB:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Bone1/Bone2/armourA:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "weak"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Bone1/Bone2/Bone3/Bone4/armourC:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bone1/Bone2/Bone3/armourB:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bone1/Bone2/armourA:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DevourerSkeleton/Bone1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -6.3, 0.0, 6.3, 0.0, -6.3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DevourerSkeleton/Bone1/Bone2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DevourerSkeleton/Bone1/Bone2/Bone3:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 37.6, -37.6, 37.6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DevourerSkeleton/Bone1/Bone2/Bone3/Bone4:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -121.3, -90.0, -54.0, -90.0, -121.3 ]
}

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 121, 162, 121 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 162, 121, 162, 121 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "neutral",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "aggro",
"speed": 5.0
} ]

[node name="EnemyDevourerBasic" type="KinematicBody2D" groups=[
"Devourer",
]]
scale = Vector2( 0.7, 0.7 )
collision_layer = 2
script = ExtResource( 2 )

[node name="AggroRange" type="Area2D" parent="."]

[node name="AggroCollision" type="CollisionShape2D" parent="AggroRange"]
position = Vector2( -1.34705, 430.621 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 2 )
shape = SubResource( 2 )

[node name="arms" type="AnimatedSprite" parent="."]
position = Vector2( 1, -1 )
frames = SubResource( 5 )
animation = "neutral"
offset = Vector2( 0, 15 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0, 2.72478e-06 )
offset = Vector2( -26, 15 )
antialiased = true
texture = SubResource( 7 )
skeleton = NodePath("DevourerSkeleton")
polygon = PoolVector2Array( 16.3544, 7.36, 24.4823, 13.414, 34.1925, 6.51057, 41.9879, -33.8645, 32.6442, -66.9924, 28.9966, -136.959, 27.2302, -170.844, 23.3004, -246.223, 19.0696, -171.83, 17.0679, -136.634, 13.1072, -66.9924, 5.46232, -33.0151 )
uv = PoolVector2Array( 20.1807, -12.4834, -3.75754, 12.2271, 22.8834, 22.2657, 107.439, 15.3159, 200.876, 10.6826, 447.432, 10.4179, 683.146, 8.63213, 1126.9, 0.596405, 684.932, -10.1178, 451.896, -9.22501, 197.787, -14.0278, 105.123, -14.8 )
polygons = [ PoolIntArray( 7, 6, 8 ), PoolIntArray( 8, 9, 5, 6 ), PoolIntArray( 9, 10, 4, 5 ), PoolIntArray( 11, 10, 4, 3 ), PoolIntArray( 11, 3, 2, 0 ), PoolIntArray( 0, 2, 1 ) ]
bones = [ NodePath("Bone1"), PoolRealArray( 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0 ), NodePath("Bone1/Bone2"), PoolRealArray( 0.54, 0, 0.54, 1, 0.5, 0, 0, 0, 0, 0, 0.5, 1 ), NodePath("Bone1/Bone2/Bone3"), PoolRealArray( 0, 0, 0, 0, 0.5, 1, 0.5, 0, 0.5, 1, 0.5, 0 ), NodePath("Bone1/Bone2/Bone3/Bone4"), PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0 ) ]

[node name="DevourerSkeleton" type="Skeleton2D" parent="Polygon2D"]

[node name="Bone1" type="Bone2D" parent="Polygon2D/DevourerSkeleton"]
position = Vector2( -4.57764e-05, 24.6336 )
rotation = -0.109956
rest = Transform2D( 1, 0, 0, 1, -4.57764e-05, 24.6336 )
default_length = 100.0

[node name="Bone2" type="Bone2D" parent="Polygon2D/DevourerSkeleton/Bone1"]
position = Vector2( -0.849435, -37.3751 )
rest = Transform2D( 1, 0, 0, 1, -0.849435, -37.3751 )
default_length = 100.0
__meta__ = {
"_edit_ik_": true
}

[node name="armourA" type="Sprite" parent="Polygon2D/DevourerSkeleton/Bone1/Bone2" groups=[
"armour",
]]
position = Vector2( 0.849, -10 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3
frame = 2

[node name="Bone3" type="Bone2D" parent="Polygon2D/DevourerSkeleton/Bone1/Bone2"]
position = Vector2( -0.849435, -54.3638 )
rotation = 0.656244
rest = Transform2D( 1, 0, 0, 1, -0.849435, -54.3638 )
default_length = 50.0

[node name="armourB" type="Sprite" parent="Polygon2D/DevourerSkeleton/Bone1/Bone2/Bone3" groups=[
"armour",
]]
position = Vector2( 0, -20 )
scale = Vector2( 0.7, 1 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3
frame = 1

[node name="Bone4" type="Bone2D" parent="Polygon2D/DevourerSkeleton/Bone1/Bone2/Bone3"]
position = Vector2( -0.849435, -59.4603 )
rotation = -2.11708
rest = Transform2D( -4.37114e-08, -1, 1, -4.37114e-08, -0.849435, -59.4603 )
default_length = 100.0

[node name="armourC" type="Sprite" parent="Polygon2D/DevourerSkeleton/Bone1/Bone2/Bone3/Bone4" groups=[
"armour",
]]
rotation = 1.5708
scale = Vector2( 0.3, 0.5 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3

[node name="endpoint" type="Position2D" parent="Polygon2D/DevourerSkeleton/Bone1/Bone2/Bone3/Bone4"]
position = Vector2( 100, 0 )

[node name="SkeletonAnim" type="AnimationPlayer" parent="Polygon2D/DevourerSkeleton"]
anims/damage = SubResource( 8 )
anims/default = SubResource( 9 )
anims/weak = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Polygon2D"]
playback_speed = 2.0
anims/neutral = SubResource( 11 )
__meta__ = {
"_editor_description_": " "
}

[node name="head" type="AnimatedSprite" parent="."]
position = Vector2( -1.18921, 27 )
frames = SubResource( 14 )
animation = "neutral"
offset = Vector2( 0, 10 )
[connection signal="body_entered" from="AggroRange" to="." method="_on_AggroRange_body_entered"]
[connection signal="body_exited" from="AggroRange" to="." method="_on_AggroRange_body_exited"]
